﻿Private library for use in astro projects calculations
(c) 2017-2018 by Boris Emchenko

Calculations made with the help of ASCOM platform
https://ascom-standards.org/

Calculating sunrise/sunset/twilight times (UTC) without ASCOM was taken from https://github.com/Mursaat/SunriseSunset which is the C# implementation of Paul Schlyter's sunriset.c.

2.2.2 [25.07.2018]
- AstroUtilsProp wrappers added: getMoonTimesForDate

2.2.1 [25.07.2018]
- AstroUtilsProp wrappers added: getMoonEventTimesForDate

2.2 [25.07.2018]
- Moon rise/Moon set time calculations

2.1.2 [01.07.2018]
- Bug in ConvertToDateTime - you should always use DateTime.Add(DayShift) instead of adding in constructor

2.1.1 [30.06.2018]
- ServiceClass changed to ConversionUtils
- Added double conversion class DoubleConversionUtils

2.1.0 [12.06.2018]
- Code restructering: AstroUtils_mob -> AstroUtils, AstroUtils -> AstroUtilsASCOM; all dublicate classes were removed

2.0.2 [08.06.2018]
- [ServiceClass] timestamp conversion

2.0.1 [08.06.2018]
- [AstroUtilsProp] bugfix for negative time calculated

2.0 [08.06.2018]
- кроме модуля с расчетом через ASCOM, добавлена версия прямых расчетов (sunrise.c)

1.0 [07.06.2018]
- модуль отделен от ObsControl